--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cities.json": "^1.1.50",
     "module-alias": "^2.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
